# marsim

./: .gitignore  LICENSE  README.md  pyproject.toml
src/marsim/: demand.py  main.py
src/marsim/demand/: __init__.py  curve.py  functions.py  generator.py  wip.py
tests/: test_functions.py
