[project]
name = "marsim"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "scipy>=1.14.1",
    "numba>=0.60.0",
    "pandas>=2.2.3",
    "matplotlib>=3.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
