[project]
name = "marsim"
version = "0.1.0"
description = "Synthetic data generator for demand market simulation"
requires-python = ">=3.13"
dependencies = [
   "matplotlib>=3.10.1",
   "numba>=0.61.0",
   "pandas>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
]
